project(galaxy CXX)

set(
galaxy_src
"src/galaxy/components/All.cpp"
"src/galaxy/components/All.hpp"
"src/galaxy/components/AnimationComponent.cpp"
"src/galaxy/components/AnimationComponent.hpp"
"src/galaxy/components/MusicComponent.cpp"
"src/galaxy/components/MusicComponent.hpp"
"src/galaxy/components/ShaderComponent.cpp"
"src/galaxy/components/ShaderComponent.hpp"
"src/galaxy/components/SoundComponent.cpp"
"src/galaxy/components/SoundComponent.hpp"
"src/galaxy/components/SpriteBatchComponent.cpp"
"src/galaxy/components/SpriteBatchComponent.hpp"
"src/galaxy/components/SpriteComponent.cpp"
"src/galaxy/components/SpriteComponent.hpp"
"src/galaxy/core/Application.cpp"
"src/galaxy/core/Application.hpp"
"src/galaxy/core/ServiceLocator.cpp"
"src/galaxy/core/ServiceLocator.hpp"
"src/galaxy/core/World.cpp"
"src/galaxy/core/World.hpp"
"src/galaxy/flags/EnabledFlag.cpp"
"src/galaxy/flags/EnabledFlag.hpp"
"src/galaxy/fs/Config.cpp"
"src/galaxy/fs/Config.hpp"
"src/galaxy/fs/FileSystem.cpp"
"src/galaxy/fs/FileSystem.hpp"
"src/galaxy/fs/Serializable.cpp"
"src/galaxy/fs/Serializable.hpp"
"src/galaxy/layer/Layer.cpp"
"src/galaxy/layer/Layer.hpp"
"src/galaxy/layer/LayerStorage.cpp"
"src/galaxy/layer/LayerStorage.hpp"
"src/galaxy/res/FontBook.cpp"
"src/galaxy/res/FontBook.hpp"
"src/galaxy/res/ShaderBook.cpp"
"src/galaxy/res/ShaderBook.hpp"
"src/galaxy/scripting/Command.cpp"
"src/galaxy/scripting/Command.hpp"
"src/galaxy/scripting/JSONDefinition.cpp"
"src/galaxy/scripting/JSONDefinition.hpp"
"src/galaxy/scripting/LuaConsole.cpp"
"src/galaxy/scripting/LuaConsole.hpp"
"src/galaxy/scripting/LuaEntity.cpp"
"src/galaxy/scripting/LuaEntity.hpp"
"src/galaxy/scripting/LuaUtils.cpp"
"src/galaxy/scripting/LuaUtils.hpp"
)

source_group(TREE "" FILES ${galaxy_src})
add_library("galaxy" STATIC ${galaxy_src})
